--- a/MenuBarTest/sideNavigation/sideNav01/styles.css
+++ b/MenuBarTest/sideNavigation/sideNav01/styles.css
@@ -23,3 +23,19 @@
 .sidenav a:hover {
     color: #f1f1f1;
 }
+
+#openNavBar {
+    display: block;
+    background-color: #c2c2c2;
+    padding: 14px 16px;
+    width: 35px;
+    cursor: pointer;
+}
+
+#openNavBar:hover {
+    background: #ccc;
+}
+
+.main {
+   margin: 50px; 
+}
